--- a/recipes/r-tinyutils/meta.yaml
+++ b/recipes/r-tinyutils/meta.yaml
@@ -1,10 +1,14 @@
+{% set version = '0.1.0' %}
+
 package:
-  name: tinyutils 
-  version: "0.1.0"
+  name: r-tinyutils 
+  version: {{ version }}
 
 source:
-  fn: 0.1.0.tar.gz
-  url: https://github.com/tinyheero/tinyutils/archive/v0.1.0.tar.gz
+  fn: tinyutils_{{ version }}.tar.gz
+  url: https://github.com/tinyheero/tinyutils/archive/v{{ version }}.tar.gz
+
+  md5: b1fa0d9c86acdf3572376d815108731e
 
 build:
   build: 0
